Updated font styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- BASIC -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="The Figure 8 Group LLC focuses on perfecting the execution of your entire operation.">
     <title>The Figure 8 Group LLC</title>
 
     <!-- FAVICON-->
@@ -95,20 +95,41 @@
             </div>
             <div class="col-12 col-md col-overlap-right col-overlap-text">
               <h2 class="display">Legendary <br>Kitchen</h2>
+              <p class="lead"><b>Services:</b></p>
               <ol>
                 <li>Set legendary standards in the kitchen from cleaning, storage, checking in product, hot food hot and cold food cold. Proper ticket times on all courses and measuring portions and proteins to be exact everytime. Each dish should and will be presented to the guest the same each and every time.</li>
-                <li>Food cost will be between 25%-29%</li>
+                <li>Food cost will be between 25%-29%.</li>
                 <li>Beginning inventory - all protein will be inventoried every night to the p-mix to see how many mistakes or giveaways we are doing.</li>
-                <li>Proper storage throughout the line and legendary cleaning / executive chef sets the standard</li>
+                <li>Proper storage throughout the line and legendary cleaning / executive chef sets the standard.</li>
                 <li>Watching labor in the kitchen is hard. Everyone must punch in no more than 5 minutes before or after their shift. For 20 min a day watching that clock I bet you will save .5% a month off labor costs.</li>
-                <li>The Figure 8 Team does their figure 8’s around the kitchen like a well- oiled machine.</li>
+                <li>The Figure 8 Team does their figure 8’s around the kitchen like a well-oiled machine.</li>
                 <li>An A+ with the board of health, grease traps completed within 4 weeks of our completed project.</li>
                 <li>Proper equipment for the team in the kitchen to work well. Gaskets, pans, proper refrigeration, working ovens, ice machines that are spotless.</li>
-                <li>Menu development</li>
+                <li>Menu development.</li>
               </ol>
               <p>This will come with a test after 2 weeks and another on the last day.</p>
-              <p>The Figure 8 Group LLC will be available for 2 days or nights a week for 2 weeks to assess any problems not completed!!!</p>
-              <p class="lead"><b>$80 an hour or $5,500 for the entire project for 4 weeks</b></p>
+              <p>The Figure 8 Group LLC will be available for 2 days or nights a week for 2 weeks to assess any problems not completed.</p>
+              <div class="callout pricing">
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>All services</b></p>
+                    <p>4 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$80/hour or $5,500 for the entire project</b></p>
+                  </div>
+                </div>
+                <hr>
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>Limited services</b></p>
+                    <p>2 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$80/hour or $2,750 for the entire project</b></p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -118,20 +139,41 @@
             </div>
             <div class="col-12 col-md col-overlap-left col-overlap-text">
               <h2 class="display">Legendary <br>Bar</h2>
+              <p class="lead"><b>Services:</b></p>
               <ol>
-                <li>Revamp the bar (organize)</li>
-                <li>Clean from top to bottom</li>
-                <li>Organize liquor, wine, and beer rooms</li>
-                <li>Take beginning inventory</li>
-                <li>Set up new sheets with new and updated prices</li>
-                <li>Return unwanted liquor, wine, and beer or use in new cocktails</li>
-                <li>Teach pours to be accurate across all bartenders</li>
-                <li>Set up weekly bar meetings with bar notes four weeks worth to set a legendary standard and a test given to all bartenders that they must pass with a 95% grade to go back on the bar</li>
-                <li>Set all bar costs in line at the end of the four weeks</li>
+                <li>Revamp the bar (organize).</li>
+                <li>Clean from top to bottom.</li>
+                <li>Organize liquor, wine, and beer rooms.</li>
+                <li>Take beginning inventory.</li>
+                <li>Set up new sheets with new and updated prices.</li>
+                <li>Return unwanted liquor, wine, and beer or use in new cocktails.</li>
+                <li>Teach pours to be accurate across all bartenders.</li>
+                <li>Set up weekly bar meetings with bar notes four weeks worth to set a legendary standard and a test given to all bartenders that they must pass with a 95% grade to go back on the bar.</li>
+                <li>Set all bar costs in line at the end of the four weeks.</li>
               </ol>
               <p>GM and or Owner need to be present to put away orders.</p>
               <p>The Figure 8 Group LLC will be available for 1 night for 3 weeks to come back and help fix any unresolved issues at no cost.</p>
-              <p class="lead"><b>$75 an hour for 4 weeks or $6,000 for entire project</b></p>
+              <div class="callout pricing">
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>All services</b></p>
+                    <p>4 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$75/hour or $6,000 for the entire project</b></p>
+                  </div>
+                </div>
+                <hr>
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>Limited services</b></p>
+                    <p>2 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$75/hour or $3,000 for the entire project</b></p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -141,8 +183,9 @@
             </div>
             <div class="col-12 col-md col-overlap-right col-overlap-text">
               <h2 class="display">Legendary <br>Service</h2>
+              <p class="lead"><b>Services:</b></p>
               <ol>
-                <li>Instruct all front of the house teammates the proper way to work the floor as a team!!!!!!!</li>
+                <li>Instruct all front of the house teammates the proper way to work the floor as a team.</li>
                 <li>Then coach them how to work individually at their #1 position.</li>
                 <li>Once they complete that task train them on job #2. Every team member has 2 positions. Otherwise, the restaurant will not succeed.</li>
                 <li>Train and teach every F.O.H staff the bar ingredients, coffee drinks and menu items. This is a 2-week process.</li>
@@ -153,7 +196,27 @@
                 <li>Tests will be given written, performance, knowledge. The individual must pass every test with a 95% or better. If not, they can not work the floor.</li>
               </ol>
               <p>The Figure 8 Group LLC will be available for 2 nights for 2 weeks to come back and help fix any unresolved issues at no cost.</p>
-              <p class="lead"><b>$90 an hour or $7,000 for the entire project for 4 weeks</b></p>
+              <div class="callout pricing">
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>All services</b></p>
+                    <p>4 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$90/hour or $7,000 for the entire project</b></p>
+                  </div>
+                </div>
+                <hr>
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>Limited services</b></p>
+                    <p>2 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$90/hour or $3,500 for the entire project</b></p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -163,8 +226,8 @@
             </div>
             <div class="col-12 col-md col-overlap-left col-overlap-text">
               <h2 class="display">Legendary <br>Social Media & Public Relations</h2>
-              <h4>Social Media</h4>
-              <ol>
+              <p class="lead"><b>Social media services:</b></p>
+              <ol class="pb-2">
                 <li>Creation of quarterly social media calendars</li>
                   <ul>
                     <li>Up to 4 platforms</li>
@@ -179,7 +242,7 @@
                     <li>For posts, websites, etc.</li>
                   </ul>
               </ol>
-              <h4 class="last">Public Relations</h4>
+              <p class="lead"><b>Public relations services:</b></p>
               <ol>
                 <li>Formation and maintenance of company’s press kit</li>
                   <ul>
@@ -199,7 +262,27 @@
                 <li>Formation of media lists for press releases and pitches</li>
                 <li>Send out pitches</li>
               </ol>
-              <p class="lead"><b>$70 an hour, one month = $5,000</b></p>
+              <div class="callout pricing">
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>All services</b></p>
+                    <p>4 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$70/hour or $5,000 for the entire project</b></p>
+                  </div>
+                </div>
+                <hr>
+                <div class="row mb-0">
+                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                    <p class="lead mb-0"><b>Limited services</b></p>
+                    <p>2 weeks</p>
+                  </div>
+                  <div class="col-12 col-sm-6">
+                    <p>$70/hour or $2,500 for the entire project</b></p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -209,10 +292,12 @@
             <div class="col-12 col-md-5 col-lg-6">
               <h2 class="display">Contact</h2>
               <p class="mb-4">To get in touch, fill out this form or call <a href="tel:857-472-4189" style="text-decoration: underline;">857-472-4189</a>.</p>
-              <div class="callout">
-                <p class="mb-0"><span class="yellow"><b>LIMITED TIME OFFER</b></span><br>The Figure 8 Group will be picking one restaurant and/or bar that signs up by the end of August to receive 2 weeks of free services* so sign up today!</p>
+              <div class="callout offer">
+                <p><span class="yellow">Receive 2 weeks of services for free</span></p>
+                <p>The Figure 8 Group will be picking one restaurant and/or bar that registers during the month of August to receive 2 free weeks of the service of their choice.*</p>
+                <p class="mb-0">Sign up today for your chance to win, and then check back on August 31st to see who was chosen!</p>
               </div>
-              <p class="smaller">* Choice of package is subject to approval by The Figure 8 Group.</p>
+              <p class="smaller mb-5">* Choice of package is subject to approval by The Figure 8 Group.</p>
             </div>
             <div class="col-12 col-md-7 col-lg-6">
 		          <script src="https://cdn02.jotfor.ms/static/prototype.forms.js?3.3.43078" type="text/javascript"></script>
@@ -329,10 +414,12 @@
         <div class="section" id="charity">
           <div class="row">
             <div class="col-12 col-md-5 col-lg-6">
-              <h2 class="display">Charity</h2>
+              <h2 class="display mb-1">Charity</h2>
+              <p class="yellow">Coming in September</p>
             </div>
             <div class="col-12 col-md-7 col-lg-6">
-              <p class="lead">The work the Figure 8 Group does will not only benefit the bars and restaurants we work with, but also the neighborhood these establishments are a part of. Over the next few months, we will be partnering with local organizations to host community events and fundraisers. Stay tuned for more information on how you can get involved and help us raise as much money as possible for some great causes!</p>
+              <p class="lead">The work the Figure 8 Group does will not only benefit the bars and restaurants we work with, but also the neighborhood these establishments are a part of. Starting in September, we will be partnering with local organizations to host community events and fundraisers.</p>
+              <p class="lead">Stay tuned for more information on how you can get involved and help us raise as much money as possible for some great causes!</p>
             </div>
           </div>
         </div>
