--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- BASIC -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Figure 8 Group LLC focuses on perfecting the execution of your entire operation.">
+    <meta name="description" content="The Figure 8 Group LLC brings legendary service to the entire operation of your restaurant or bar.">
     <title>The Figure 8 Group LLC</title>
 
     <!-- FAVICON-->
@@ -111,22 +111,22 @@
               <p>The Figure 8 Group LLC will be available for 2 days or nights a week for 2 weeks to assess any problems not completed.</p>
               <div class="callout pricing">
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>All services</b></p>
                     <p>4 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
+                  <div class="col-12 col-sm-7">
                     <p>$80/hour or $5,500 for the entire project</b></p>
                   </div>
                 </div>
                 <hr>
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>Limited services</b></p>
                     <p>2 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
-                    <p>$80/hour or $2,750 for the entire project</b></p>
+                  <div class="col-12 col-sm-7">
+                    <p>$80/hour or $2,750 for the services The Figure 8 Group and the client agree on</b></p>
                   </div>
                 </div>
               </div>
@@ -155,22 +155,22 @@
               <p>The Figure 8 Group LLC will be available for 1 night for 3 weeks to come back and help fix any unresolved issues at no cost.</p>
               <div class="callout pricing">
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>All services</b></p>
                     <p>4 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
+                  <div class="col-12 col-sm-7">
                     <p>$75/hour or $6,000 for the entire project</b></p>
                   </div>
                 </div>
                 <hr>
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>Limited services</b></p>
                     <p>2 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
-                    <p>$75/hour or $3,000 for the entire project</b></p>
+                  <div class="col-12 col-sm-7">
+                    <p>$75/hour or $3,000 for the services The Figure 8 Group and the client agree on</b></p>
                   </div>
                 </div>
               </div>
@@ -198,22 +198,22 @@
               <p>The Figure 8 Group LLC will be available for 2 nights for 2 weeks to come back and help fix any unresolved issues at no cost.</p>
               <div class="callout pricing">
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>All services</b></p>
                     <p>4 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
+                  <div class="col-12 col-sm-7">
                     <p>$90/hour or $7,000 for the entire project</b></p>
                   </div>
                 </div>
                 <hr>
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>Limited services</b></p>
                     <p>2 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
-                    <p>$90/hour or $3,500 for the entire project</b></p>
+                  <div class="col-12 col-sm-7">
+                    <p>$90/hour or $3,500 for the services The Figure 8 Group and the client agree on</b></p>
                   </div>
                 </div>
               </div>
@@ -264,22 +264,22 @@
               </ol>
               <div class="callout pricing">
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>All services</b></p>
                     <p>4 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
+                  <div class="col-12 col-sm-7">
                     <p>$70/hour or $5,000 for the entire project</b></p>
                   </div>
                 </div>
                 <hr>
                 <div class="row mb-0">
-                  <div class="col-12 col-sm-6 mb-2 mb-sm-0">
+                  <div class="col-12 col-sm-5 mb-2 mb-sm-0">
                     <p class="lead mb-0"><b>Limited services</b></p>
                     <p>2 weeks</p>
                   </div>
-                  <div class="col-12 col-sm-6">
-                    <p>$70/hour or $2,500 for the entire project</b></p>
+                  <div class="col-12 col-sm-7">
+                    <p>$70/hour or $2,500 for the services The Figure 8 Group and the client agree on</b></p>
                   </div>
                 </div>
               </div>
